コード修正。

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <div id="calculate-area" class="calculate-area" data-full-screen="0">
     <div id="header-message" class="font"></div>
     <div id="question-number-area" class="number-area"></div>
-    <p id="question-info-label"></p>
+    <p id="question-info-label" class="display-none"></p>
 </div>
 <hr>
 <div id="play-button-area" class="operation-panel">
