スマホの入力キーボードを制御。

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
                         <span class="input-group-text">桁数</span>
                     </div>
                     <label for="addition-digit"></label>
-                    <input type="text" id="addition-digit" class="form-control text-end">
+                    <input type="text" inputmode="decimal" id="addition-digit" class="form-control text-end">
                     <div class="input-group-append">
                         <span class="input-group-text">桁</span>
                     </div>
@@ -103,7 +103,7 @@
                         <span class="input-group-text">口数</span>
                     </div>
                     <label for="addition-length"></label>
-                    <input type="text" id="addition-length" class="form-control text-end">
+                    <input type="text" inputmode="decimal" id="addition-length" class="form-control text-end">
                     <div class="input-group-append">
                         <span class="input-group-text">口</span>
                     </div>
@@ -113,7 +113,7 @@
                         <span class="input-group-text">秒数</span>
                     </div>
                     <label for="addition-time"></label>
-                    <input type="text" id="addition-time" class="form-control text-end">
+                    <input type="text" inputmode="numeric" id="addition-time" class="form-control text-end">
                     <div class="input-group-append">
                         <span class="input-group-text">秒</span>
                     </div>
@@ -127,11 +127,11 @@
                         <span class="input-group-text">桁数</span>
                     </div>
                     <label for="multiplication-digit-1"></label>
-                    <input type="text" id="multiplication-digit-1" class="form-control text-end">
+                    <input type="text" inputmode="decimal" id="multiplication-digit-1" class="form-control text-end">
                     <span class="input-group-text">桁</span>
                     <span class="input-group-text">×</span>
                     <label for="multiplication-digit-2"></label>
-                    <input type="text" id="multiplication-digit-2" class="form-control text-end">
+                    <input type="text" inputmode="decimal" id="multiplication-digit-2" class="form-control text-end">
                     <div class="input-group-append">
                         <span class="input-group-text">桁</span>
                     </div>
@@ -143,7 +143,7 @@
                         <span class="input-group-text">口数</span>
                     </div>
                     <label for="multiplication-length"></label>
-                    <input type="text" id="multiplication-length" class="form-control text-end">
+                    <input type="text" inputmode="decimal" id="multiplication-length" class="form-control text-end">
                     <div class="input-group-append">
                         <span class="input-group-text">口</span>
                     </div>
@@ -153,7 +153,7 @@
                         <span class="input-group-text">秒数</span>
                     </div>
                     <label for="multiplication-time"></label>
-                    <input type="text" id="multiplication-time" class="form-control text-end">
+                    <input type="text" inputmode="numeric" id="multiplication-time" class="form-control text-end">
                     <div class="input-group-append">
                         <span class="input-group-text">秒</span>
                     </div>
@@ -168,7 +168,7 @@
                     <span class="input-group-text">Flash rate</span>
                 </div>
                 <label for="common-flashRate"></label>
-                <input type="text" id="common-flashRate" class="form-control text-end">
+                <input type="text" inputmode="numeric" id="common-flashRate" class="form-control text-end">
                 <div class="input-group-append">
                     <span class="input-group-text">％</span>
                 </div>
@@ -180,7 +180,7 @@
                     <span class="input-group-text">Offset</span>
                 </div>
                 <label for="common-offset"></label>
-                <input type="text" id="common-offset" class="form-control text-end">
+                <input type="text" inputmode="numeric" id="common-offset" class="form-control text-end">
                 <div class="input-group-append">
                     <span class="input-group-text">ms</span>
                 </div>
@@ -200,7 +200,7 @@
 </div>
 <div id="input-answer-area" class="display-none">
     <label><span style="color: darkgreen">答えを入力してください</span>
-        <input id="input-answer-box" type="number">
+        <input id="input-answer-box" type="number" inputmode="numeric">
     </label>
 </div>
 <script type="text/javascript" src="assets/globals.js?ver=0.4.1"></script>
