サウンドのデフォルト拡張子を変更。

--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,8 @@
             </div>
             <select name="sound-extension" id="sound-extension" onchange="setSoundExtension(this.value);"
                     class="form-select">
-                <option value="ogg" selected>ogg</option>
-                <option value="wav">wav</option>
+                <option value="wav" selected>wav</option>
+                <option value="ogg">ogg</option>
             </select>
         </div>
         <div class="btn-group" role="group">
