--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <link rel="shortcut icon" href="image/favicon.ico">
     <link href="assets/bootstrap@5.0.0-beta1.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/index.css?ver=0.4.3">
+    <link rel="stylesheet" href="assets/index.css?ver=0.5.0">
+    <script src="assets/bootstrap@5.0.0-beta1.bundle.min.js"></script>
     <script src="assets/howler_2_2_1.min.js"></script>
     <script type="text/javascript" src="lib/shortcut.js"></script>
 </head>
@@ -52,13 +53,16 @@
             <button type="button" class="btn btn-outline-success" onclick="displayHelp();">Help</button>
         </div>
         <div class="btn-group" role="group">
-            <button type="button" id="load-params-button" class="btn btn-outline-info" onclick="loadParams();">
+            <button type="button" id="load-params-button" class="btn btn-outline-info"
+                    data-bs-toggle="modal" data-bs-target="#loadParamsConfirmModal" onclick="this.blur();">
                 Load
             </button>
-            <button type="button" id="save-params-button" class="btn btn-outline-info" onclick="saveParams();">
+            <button type="button" id="save-params-button" class="btn btn-outline-info"
+                    data-bs-toggle="modal" data-bs-target="#saveParamsConfirmModal">
                 Save
             </button>
-            <button type="button" id="delete-params-button" class="btn btn-outline-info" onclick="deleteParams();">
+            <button type="button" id="delete-params-button" class="btn btn-outline-info"
+                    data-bs-toggle="modal" data-bs-target="#deleteParamsConfirmModal">
                 Delete
             </button>
         </div>
@@ -195,13 +199,134 @@
         <p id="number-history-stringify" style="display: none;"></p>
     </div>
 </div>
-<div id="input-answer-area" class="display-none">
-    <label><span style="color: darkgreen">答えを入力してください</span>
-        <input id="input-answer-box" type="number" inputmode="numeric">
-    </label>
+
+<!-- Modal -->
+<!-- Load Params -->
+<div class="modal" id="loadParamsConfirmModal" tabindex="-1" aria-labelledby="loadParamsConfirmModalLabel">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="loadParamsConfirmModalLabel">Flash Anzan</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>設定を読み込みますか？</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">閉じる</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
+                        onclick="loadParams();" data-bs-toggle="modal" data-bs-target="#loadParamsCompletedModal">
+                    読み込む
+                </button>
+            </div>
+        </div>
+    </div>
 </div>
-<script type="text/javascript" src="assets/globals.js?ver=0.4.3"></script>
-<script type="text/javascript" src="assets/index.js?ver=0.4.3"></script>
-<script type="text/javascript" src="assets/button_events.js?ver=0.4.3"></script>
+<div class="modal" id="loadParamsCompletedModal" tabindex="-1" aria-labelledby="loadParamsCompletedModalLabel">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="loadParamsCompletedModalLabel">Flash Anzan</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>**SET BY JAVASCRIPT**</p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Save Params -->
+<div class="modal" id="saveParamsConfirmModal" tabindex="-1" aria-labelledby="saveParamsConfirmModalLabel">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="saveParamsConfirmModalLabel">Flash Anzan</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>設定を保存しますか？</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">閉じる</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
+                        onclick="saveParams();" data-bs-toggle="modal" data-bs-target="#saveParamsCompletedModal">
+                    保存する
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal" id="saveParamsCompletedModal" tabindex="-1" aria-labelledby="saveParamsCompletedModalLabel">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="saveParamsCompletedModalLabel">Flash Anzan</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>設定を保存しました</p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Delete Params -->
+<div class="modal" id="deleteParamsConfirmModal" tabindex="-1" aria-labelledby="deleteParamsConfirmModalLabel">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteParamsConfirmModalLabel">Flash Anzan</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>設定を削除しますか？</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">閉じる</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
+                        onclick="deleteParams();" data-bs-toggle="modal" data-bs-target="#deleteParamsCompletedModal">
+                    削除する
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal" id="deleteParamsCompletedModal" tabindex="-1" aria-labelledby="deleteParamsCompletedModalLabel">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteParamsCompletedModalLabel">Flash Anzan</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>設定を削除しました</p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Input-answer Params -->
+<button type="button" id="openInputAnswerModal" class="btn btn-primary" data-bs-toggle="modal"
+        data-bs-target="#inputAnswerModal"
+        style="display: none;"></button>
+<div class="modal" id="inputAnswerModal" tabindex="-1" aria-labelledby="inputAnswerModalLabel">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="inputAnswerModalLabel">答えを入力してください</h5>
+                <button type="button" id="closeInputAnswerModal" class="btn-close" data-bs-dismiss="modal"
+                        aria-label="Close"
+                        style="display: none;"></button>
+            </div>
+            <div class="modal-body">
+                <p>Enter キーで送信します</p>
+                <p class="text-danger display-none">Enter キーを押してください</p>
+                <label for="input-answer-box" style="display: none;"></label>
+                <input type="text" id="input-answer-box" inputmode="numeric" class="form-control">
+            </div>
+        </div>
+    </div>
+</div>
+<script type="text/javascript" src="assets/globals.js?ver=0.5.0"></script>
+<script type="text/javascript" src="assets/button_events.js?ver=0.5.0"></script>
+<script type="text/javascript" src="assets/index.js?ver=0.5.0"></script>
 </body>
 </html>
